# FINAL2

./: .gitignore  PERFORMANCE_REPORT.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
backend/: .coverage  .env  README.md  alembic.ini  pyproject.toml  study_helper.db
backend/migrations/: env.py
backend/migrations/versions/: 00e199191cbe_add_notetasklink_association_table.py  617787a35abf_add_course_note_and_task_models.py  a284bedbf9ff_add_user_model.py
backend/src/study_helper/: __init__.py  main.py
backend/src/study_helper/api/: auth.py  courses.py  deps.py  notes.py  tasks.py
backend/src/study_helper/core/: config.py  security.py
backend/src/study_helper/db/: base.py
backend/src/study_helper/models/: __init__.py  course.py  note.py  note_task_link.py  task.py  user.py
backend/src/study_helper/schemas/: course.py  note.py  note_task_link.py  task.py  user.py
backend/src/study_helper/services/: auth.py  course.py  note.py  task.py
backend/src/study_helper/utils/: __init__.py  date_filters.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_api.py  test_courses_api.py  test_notes_api.py  test_tasks_api.py
backend/tests/integration/: test_auth_service.py  test_course_service.py  test_note_service.py  test_task_service.py
backend/tests/unit/: test_date_filters.py  test_models.py  test_schemas.py  test_security.py
frontend/: README.md  test_performance.py
frontend/src/: index.html
specs/001-student-knowledge-app/: AUDIT-REPORT.md  (+6 more)
(+16 files in other folders)
